--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primeicons": "^5.0.0",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
+    "async": ">=2.6.4",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.4",
